--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,12 @@
 * {
   font-family: 'Poppins', sans-serif;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
